# VEX-Launcher

./: .gitignore  .npmrc  CONTRIBUTING.md  FEATURES.md  LICENSE  PORTABLE.md  README.md  SECURITY.md  build-auth-helper.ps1  build-portable.ps1  dev-portable.ps1  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
auth-helper/: Program.cs  VexMicrosoftAuth.csproj
portable-bootstrap/: Program.cs
src/: App.tsx  data.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: installer-artwork.html
src-tauri/src/: lib.rs  main.rs
