[package]
name = "vex-launcher"
version = "0.6.1"
description = "VEX Launcher - a modern, accessible Minecraft launcher"
authors = ["VEX Launcher contributors"]
edition = "2021"

[lib]
name = "vex_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
zip = "2"
flate2 = "1"
tar = "0.4"
md5 = "0.7"
futures = "0.3"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
